c4prj1_deck/grade.txt
Grading at Sat 18 Nov 2023 01:30:16 AM UTC
Compiling deck.c -> deck.o
deck.c: In function ‘add_empty_card’:
deck.c:57:8: error: incompatible type for argument 1 of ‘free’
   57 |   free(*addEc);
      |        ^~~~~~
      |        |
      |        card_t {aka struct card_tag}
In file included from deck.c:2:
/usr/include/stdlib.h:565:25: note: expected ‘void *’ but argument is of type ‘card_t’ {aka ‘struct card_tag’}
  565 | extern void free (void *__ptr) __THROW;
      |                   ~~~~~~^~~~~
deck.c: At top level:
deck.c:63:1: error: expected identifier or ‘(’ before ‘{’ token
   63 | {
      | ^
deck.c: In function ‘build_remaining_deck’:
deck.c:85:11: error: ‘j’ undeclared (first use in this function)
   85 |       for(j =0 ;j< hand->n_cards;j++){
      |           ^
deck.c:85:11: note: each undeclared identifier is reported only once for each function it appears in
deck.c:90:3: error: unknown type name ‘deck’; did you mean ‘deck_t’?
   90 |   deck *res = make_deck_exclude(rem);
      |   ^~~~
      |   deck_t
deck.c:90:15: error: initialization of ‘int *’ from incompatible pointer type ‘deck_t *’ {aka ‘struct deck_tag *’} [-Werror=incompatible-pointer-types]
   90 |   deck *res = make_deck_exclude(rem);
      |               ^~~~~~~~~~~~~~~~~
deck.c:92:10: error: returning ‘int *’ from a function with incompatible return type ‘deck_t *’ {aka ‘struct deck_tag *’} [-Werror=incompatible-pointer-types]
   92 |   return res;
      |          ^~~
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
